[tool.poetry]
name = "agents-llamaindex"
version = "0.1.0"
description = ""
authors = ["Antonio Henrique Machado <antoniohenriquemachado08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.10.62"
python-dotenv = "^1.0.1"
transformers = "^4.44.0"
llama-index-llms-groq = "^0.1.4"
fastapi = "^0.112.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
axeh = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
